--- a/style.css
+++ b/style.css
@@ -34,4 +34,36 @@ nav a{
     font-family: "Pacifico", cursive;
     font-weight: 400;
     font-style: normal;
-  }
+}
+
+.Mee{
+    width: 100vw;
+    height: 50vw;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text{
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    
+}
+
+.mee_avatar img{
+    border-radius: 100px; /* Радиус скругления */
+    border: 3px solid green; /* Параметры рамки */
+    box-shadow: 0 0 7px #666; /* Параметры тени */
+}
+
+.kartinki{
+    width: 128px;
+
+}
+
+.Prohod_1_html{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
